style.css
@font-face {
    font-family: 'karla-regular';
    src: url('fonts/Karla-Regular.eot');
    src: url('fonts/Karla-Regular.eot?#iefix') format('embedded-opentype'),
         url('fonts/Karla-Regular.woff') format('woff'),
         url('fonts/Karla-Regular.ttf') format('truetype'),
         url('fonts/Karla-Regular.svg#karla-regular') format('svg');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'karla-bold';
    src: url('fonts/Karla-Bold.eot');
    src: url('fonts/Karla-Bold.eot?#iefix') format('embedded-opentype'),
         url('fonts/Karla-Bold.woff') format('woff'),
         url('fonts/Karla-Bold.ttf') format('truetype'),
         url('fonts/Karla-Bold.svg#karla-bold') format('svg');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'karla-bold-italic';
    src: url('fonts/Karla-BoldItalic.eot');
    src: url('fonts/Karla-BoldItalic.eot?#iefix') format('embedded-opentype'),
         url('fonts/Karla-BoldItalic.woff') format('woff'),
         url('fonts/Karla-BoldItalic.ttf') format('truetype'),
         url('fonts/Karla-BoldItalic.svg#karla-bold-italic') format('svg');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'karla-italic';
    src: url('fonts/Karla-Italic.eot');
    src: url('fonts/Karla-Italic.eot?#iefix') format('embedded-opentype'),
         url('fonts/Karla-Italic.woff') format('woff'),
         url('fonts/Karla-Italic.ttf') format('truetype'),
         url('fonts/Karla-Italic.svg#karla-italic') format('svg');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'pacifico';
    src: url('fonts/Pacifico.eot');
    src: url('fonts/Pacifico.eot?#iefix') format('embedded-opentype'),
         url('fonts/Pacifico.woff') format('woff'),
         url('fonts/Pacifico.ttf') format('truetype'),
         url('fonts/Pacifico.svg#pacifico') format('svg');
    font-weight: normal;
    font-style: normal;
}

html, body {
    box-sizing: border-box;
    color: #2d2d2d;
    font-family: 'karla-regular', sans-serif;
    font-size: 16px; 
}


h1, h2, h3 {
    font-family: 'pacifico', cursive;
    text-align: center;
    font-size: 2.5em;
    color: #646464;
    padding: 35px;
}

nav {
    display: flex;
    flex-direction: column;
}

nav ul {
    display: flex;
    justify-content: center;
}

nav ul li {
    padding: 10px;
}

.nav-bar {
    background-color: #000;
    color: #fff;
}

.pp-logo {
    height: 40px;
}


header div * {
    color: #fff;
    padding: 15px;
}

header div {    
    align-items: center;
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin: auto;
    min-height: 450px;
    background: 
        linear-gradient(
            rgba(80, 80, 80, 0.25), 
            rgba(80, 80, 80, 0.25)
        ),
        url('images/kayak-bkgd.jpg');
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    text-align: center;
    color: #fff;
}

header div h1 {
    font-size: 3em;
}

header div h2 {
    font-size: 2em;
}

.sub {
    background-color: rgba(0, 0, 0, 0.5);  
}

header button {
    background-color: #e2574c;
    border-radius: 15px;
    border: none;
    color: white;
    padding: 11px;
    max-width: 250px;
}

.container p {
    line-height: 1.5em;
}

.about {
    max-width: 720px;
    margin: auto;
    padding-bottom: 30px;
}

.images img {
    box-sizing: border-box;
    max-width: 100%;
    height: auto;
    padding: 5px;
}

table{
    box-sizing: border-box;
    padding: 5px;
    border: 1px solid;
    border-color: #c8c8c8;
    border-collapse: collapse;
    width: 100%;

}

table th {
    background-color: #e6e6e6;
}

table td, th {
    border: 1px solid #c8c8c8;
    border-collapse: collapse;
    padding: 10px;
}


a.brand-color {
    color: #e2574c;
}

a:hover.brand-color{
    color: #b64036;
}

.article {
    padding-left: 5px;
}

.article p {
    padding-top: 20px;

}

.article p:last-child {
    padding-bottom: 20px;
}



footer {
    align-items: center;
    background-color: #212121;
    display: flex;
    justify-content: space-between;
    color: #fff;
    height: 100px;
}

.social-media {
    display: flex;
}

footer ul {
    margin-right: 10%;
    margin-left: auto;
}
footer a {
    text-decoration: none;
    color: #fff;
}


@media screen and (min-width: 600px){

    .container {
    text-align: center;
    margin: auto;
    }

    nav { 
    align-items: center;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    }

    nav ul {
    display: flex;
    }

    nav ul li {
        padding: 10px;
    }

    div.images {
    flex-direction: row;
    justify-content: space-between;
    align-items: flex-start;
    }

    div.images img {
        flex: 1;
        max-width: 32%;
        height: auto;
    }

    .rentals {
        display: flex;
        text-align: left;
    }

    .article {
        flex: 1;
    }

    .rentals table {
        flex: 1;
        max-width: 50%;
    }

    

}

@media all and (min-width: 1140px){
    .container {
        max-width: 1140px;
    }
    

}

